--- a/style/style.css
+++ b/style/style.css
@@ -358,7 +358,7 @@ section.suscibe {
     width: 1320px;
     height: 616px;
     margin: 50px auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     border-radius: 16px;
     background: rgba(255, 0, 0, 0.05);
 }
@@ -379,7 +379,7 @@ section.suscibe {
     width: 896px;
     height: 64px;
     text-align: center;
-    margin: 0px auto;
+    margin: 10px auto 20px auto;
 }
 
 .sus-para {
@@ -391,5 +391,83 @@ section.suscibe {
     height: 72px;
     text-align: center;
     margin: 0px auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
+    position: relative;
+}
+input[type="email"]
+{
+    width: 100%;
+    height: 100%;
+    font-size: 24px;
+    border-radius: 30px;
+    border: none;
+    padding: 20px;
+    padding-right: 80px;
+}
+    
+
+#input-button
+{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    padding: 0px 30px;
+    border: none;
+    font-size: 24px;
+    color:white;
+    background-color: red;
+    border-radius: 0px 30px 30px 0px;
+}
+main::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+footer
+{
+    width: 100%;
+    height: 609px;
+    background-color: black;
+}
+.footer-title
+{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 1185px;
+    height: 80px;
+    border: 2px solid green;
+    margin: 0px auto;
+    /* color: white; */
+}
+
+.footer-paragraph
+{
+    color: white;
+}
+
+.social-media
+{
+    margin: 50px;
+    text-align: center;
+    border-bottom: 2px solid rgba(100,100,100, 0.5);
+    border-top: 2px solid rgba(100,100,100, 0.5);
+}
+.socal-img
+{
+    margin: 10px;
+    padding: 20px;
+}
+.last
+{
+    margin-top: 100px;
+    display: flex;
+    color: white;
+    justify-content: space-around;
+    align-items: center;
+}
+p.last-paragraph
+{
+margin-left: 800px;
 }
