--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ section.banner {
     height: 600px;
     margin: 50px auto;
     border-radius: 16px;
-    background: linear-gradient(180.00deg, rgb(7, 2, 17), rgba(7, 2, 17, 0) 100%), url("/images/Banner\ Image.png");
+    background: linear-gradient(180.00deg, rgb(7, 2, 17), rgba(7, 2, 17, 0) 100%), url("./images/Banner\ Image.png");
     ;
     display: flex;
     align-items: center;
