--- a/style/style.css
+++ b/style/style.css
@@ -82,7 +82,7 @@ section.victorr {
     height: 600px;
     margin: 50px auto;
     border-radius: 16px;
-    background: linear-gradient(90.00deg, rgb(7, 2, 17), rgba(7, 2, 17, 0) 100%), url("/images/Vectorrr.png");
+    background: linear-gradient(90.00deg, rgb(7, 2, 17), rgba(7, 2, 17, 0) 100%), url("../images/Vectorrr.png");
     display: flex;
     align-items: center;
 }
@@ -239,7 +239,7 @@ section.holiday {
     height: 986px;
     margin: 50px auto;
     /* border: 2px solid red; */
-    background-image: url("/images/Rectangle\ 2.png");
+    background-image: url("../images/Rectangle\ 2.png");
     background-repeat: no-repeat;
     background-position: bottom;
 }
