--- a/style/style.css
+++ b/style/style.css
@@ -427,6 +427,7 @@ footer
     width: 100%;
     height: 609px;
     background-color: black;
+    border: 1px solid black;
 }
 .footer-title
 {
@@ -436,7 +437,7 @@ footer
     width: 1185px;
     height: 80px;
     border: 2px solid green;
-    margin: 0px auto;
+    margin: 100px auto;
     /* color: white; */
 }
 
