--- a/style/style.css
+++ b/style/style.css
@@ -239,7 +239,7 @@ section.holiday {
     height: 986px;
     margin: 50px auto;
     /* border: 2px solid red; */
-    background-image: url("../images/Rectangle\ 2.png");
+    background-image: url("../images/Rectangle 2.png");
     background-repeat: no-repeat;
     background-position: bottom;
 }
